--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "coindesk-rs"
+name = "coindesk"
 version = "0.1.0"
 authors = ["Grant Handy <grantshandy@gmail.com>"]
 edition = "2018"
@@ -9,3 +9,6 @@ edition = "2018"
 [dependencies]
 serde_json = "1.0.64"
 surf = "2.2.0"
+
+[dev-dependencies]
+tokio = { version = "1.5.0", features = ["full"] }
