--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 serde_json = "1.0.64"
 surf = "2.2.0"
+chrono = "0.4.19"
 
 [dev-dependencies]
 tokio = { version = "1.5.0", features = ["full"] }
