--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Grant Handy <grantshandy@gmail.com>"]
 edition = "2018"
 description = "A Bitcoin price index API powered by coindesk.com"
 keywords = ["price", "index", "bitcoin", "crypto", "cryptocurrency"]
+documentation = "https://docs.rs/coindesk"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
